--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 ################################
 helper_code/archive
 helper_code/playground
+archive
+gw_context_counts/archive
 
 # Compiled source #
 ###################
