--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 ################################
 helper_code/archive
 helper_code/playground
-archive
+*archive
 gw_context_counts/archive
+*outfiles
+*temp*
+*folded_counts.txt
+*chrom_counts*
+singletons_excluded/COSMO/cosmo_multiallelic
 
 # Compiled source #
 ###################
@@ -20,12 +25,12 @@ gw_context_counts/archive
 # git has its own built in compression methods
 *.7z
 *.dmg
-*.gz
 *.iso
 *.jar
 *.rar
 *.tar
 *.zip
+#*.gz 
 
 # Logs and databases #
 ######################
