modified .gitignore.  uploaded bfv edits on r7.

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@ helper_code/playground
 *temp*
 sandbox*
 *folded_counts.txt
-*chrom_counts/*
+*chrom_counts
 vcf_filtration/filtered_1kg_v3
 *.params
 *.ipynb
+*JPTCHSCHB_EAS_chrom_counts.txt
 
 # Compiled source #
 ###################
