tracking small files in vcf_filtration

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ helper_code/playground
 sandbox*
 *folded_counts.txt
 *chrom_counts
-vcf_filtration/filtered_1kg_v3
 *.params
 *.ipynb
-*JPTCHSCHB_EAS_chrom_counts.txt
+*chrom_counts.txt
+*.tbi
 
 # Compiled source #
 ###################
